removed the env file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </table>
         </div>
         <div id="not-found">
-            <img src="/pics/not-found.png" alt="/pics/not-found.png" id="image">
+            <img src="/pics/not-found.png" alt="/pics/not-found.png id="image">
             <h3 id="caption">City not found!</h1>
         </div>
     </div>
